# Sturgeon

./: README.md  basecall.py  call_mods.py  dataloader.py  decode_test.py  extract_mod_features.py  generate_CTC_data_set.py  merqury_usage  train_basecall.py  train_basecall_parallel.py  train_mod.py  train_mod_async.py
cpp_components/: CMakeLists.txt  ctc_decode.cpp  ctc_decoder.py  test_ctc_decode.py
models/: decode_utils.py  model.py
scripts/: cal_fastq_depth.py  cal_pearson.py  convert_mdule.py  count_error_rate.py  count_error_rate_2.py  merge_ctc_data.py  merge_npy.py  merge_pos_and_neg.py  sort_and_split_reads.py  test.py  test2.py
utils/: basecall_utils.py  readers.py  utils_func.py
